correct white space
at bottom of screen in samsung tablet

--- a/css/about.css
+++ b/css/about.css
@@ -1667,6 +1667,9 @@ footer{
     .signup_main{
         height:auto;
     }
+    #signup_html{
+        background-color:#7a1501;
+    }
     
 }
 
